--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,11 @@ html,body {height: 100%;}
 body {
 	margin: 0px;
 	padding: 0px;
-	color: #333;	/*全体の文字色*/
-	font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;	/*フォント種類*/
-	font-size: 16px;	/*文字サイズ*/
-	line-height: 2;		/*行間*/
-	background: #f0f0f0;	/*背景色*/
+	color: #333; /*全体の文字色*/
+	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif; /*フォント種類*/
+	font-size: 16px; /*文字サイズ*/
+	line-height: 2; /*行間*/
+	background: #FDF5E6; /*背景色*/
 	-webkit-text-size-adjust: none;
 }
 h1,h2,h3,h4,h5,p,ul,ol,li,dl,dt,dd,form,figure,form {margin: 0px;padding: 0px;font-size: 100%;font-weight: normal;}
@@ -47,7 +47,9 @@ header {
 	height: 100%;
 	overflow: auto;
 	position: relative;
-	background: url(../images/mainimg.jpg) no-repeat center center / cover;	/*背景画像の読み込み*/
+	background: url(../images/header_slide/header_slide1.jpg) no-repeat center center; /*背景画像の読み込み*/
+	animation: header_slide 30s ease 0s infinite normal;
+	-webkit-animation: header_slide 30s ease 0s infinite normal;
 }
 /*ロゴ画像*/
 header #logo img {
@@ -56,6 +58,27 @@ header #logo img {
 	position: absolute;
 	left: 30%;		/*ロゴやメニューが入っているブロックに対して、左からの配置場所の指定。*/
 	bottom: 50%;	/*ロゴやメニューが入っているブロックに対して、下からの配置場所の指定。*/
+}
+@keyframes header_slide {
+	0% {
+		background-image: url('../images/header_slide/header_slide1.jpg');
+		opacity: 1;
+	}
+
+	33% {
+		background-image: url('../images/header_slide/header_slide2.jpg');
+		opacity: 1;
+	}
+
+	66% {
+		background-image: url('../images/header_slide/header_slide3.jpg');
+		opacity: 1;
+	}
+
+	99% {
+		background-image: url('../images/header_slide/header_slide1.jpg');
+		opacity: 1;
+	}
 }
 
 /*メニュー
@@ -165,10 +188,11 @@ header #logo img {
 }
 /*画像の設定*/
 .prof img {
-	width: 30%;			/*画像幅*/
-	float: left;		/*画像を左に回り込み*/
+	width: 60%; /*画像幅*/
+	/*float: inherit; /*画像を左に回り込み*/
 	margin-left: 1%;
-	margin-right: 3%;	/*画像の右側に空けるスペース*/
+	margin-right: 1%; /*画像の右側に空けるスペース*/
+	padding-bottom: 3%;
 }
 /*段落タグ*/
 .prof p {
@@ -202,7 +226,7 @@ header #logo img {
 }
 /*段落タグ*/
 .res p {
-	padding: 0 !important;
+	padding: 3 !important;
 }
 
 /*Serviceページ
@@ -234,15 +258,42 @@ header #logo img {
 	padding: 0 !important;
 }
 
+/*Conferenceページ
+---------------------------------------------------------------------------*/
+/*各ブロックごとの設定*/
+.conf {
+	overflow: hidden;
+	width: 95%;
+	/* float: right; */
+	line-height: 1.5;
+	/*border-bottom: 1px solid #999;	/*下線の幅、線種、色*/
+	padding: 20px; /*ボックス内の余白*/
+}
+/*１番目のlistブロックへの追加指定。上に線を入れる。*/
+/*.prof:first-of-type {
+border-top: 1px solid #999;
+}
+/*画像の設定*/
+.conf img {
+	width: 35%; /*画像幅*/
+	float: right;
+	margin-left: 1%;
+	margin-right: 1%; /*画像の右側に空けるスペース*/
+	padding-right: 3%;
+	padding-bottom: 3%;
+}
+.conf button {
+	margin-bottom: 10px;
+}
 /*フッター設定
 ---------------------------------------------------------------------------*/
-footer {
-	clear: both;
-	text-align: center;
-	background: #374c55;	/*背景色*/
-	color: #fff;		/*文字色*/
-	font-size: 85%;		/*文字サイズ*/
-}
+	footer {
+		clear: both;
+		text-align: center;
+		background: #374c55; /*背景色*/
+		color: #fff; /*文字色*/
+		font-size: 85%; /*文字サイズ*/
+	}
 footer a {
 	color: #fff;	/*リンクテキストの文字色*/
 	text-decoration: none;
@@ -265,12 +316,12 @@ footer .pr {
 /*日付設定*/
 #new dt {
 	float: left;
-	width: 9em;
+	width: 12em;
 	letter-spacing: 0.1em;
 }
 /*記事設定*/
 #new dd {
-	padding-left: 9em;
+	padding-left: 12em;
 }
 
 /*テーブル
@@ -456,10 +507,32 @@ header #logo img {
   tr:last-child th{
 	border-bottom:1px solid #666;  
   }
+	.conf {
+		overflow: hidden;
+		width: 95%;
+		/* float: right; */
+		line-height: 1.5;
+		/*border-bottom: 1px solid #999;	/*下線の幅、線種、色*/
+		padding: 20px; /*ボックス内の余白*/
+	}
+		/*１番目のlistブロックへの追加指定。上に線を入れる。*/
+		/*.prof:first-of-type {
+border-top: 1px solid #999;
 }
+/*画像の設定*/
+		.conf img {
+			width: 60%; /*画像幅*/
+			float: left;
+	margin-left: 1%;
+	margin-right: 1%; /*画像の右側に空けるスペース*/
+			padding-bottom: 3%;
+		}
 
+		.conf button {
+			margin-bottom: 10px;
+		}
 
-
+}
 /*画面幅480px以下の設定
 ------------------------------------------------------------------------------------------------------------------------------------------------------*/
 @media screen and (max-width:480px){
@@ -564,7 +637,30 @@ table{
   tr:last-child th{
 	border-bottom:1px solid #666;  
   }
+	.conf {
+		overflow: hidden;
+		width: 95%;
+		/* float: right; */
+		line-height: 1.5;
+		/*border-bottom: 1px solid #999;	/*下線の幅、線種、色*/
+		padding: 20px; /*ボックス内の余白*/
+	}
+		/*１番目のlistブロックへの追加指定。上に線を入れる。*/
+		/*.prof:first-of-type {
+border-top: 1px solid #999;
+}
+/*画像の設定*/
+		.conf img {
+			width: 60%; /*画像幅*/
+			float: left;
+			margin-left: 1%;
+			margin-right: 1%; /*画像の右側に空けるスペース*/
+			padding-bottom: 3%;
+		}
 
+		.conf button {
+			margin-bottom: 10px;
+		}
 }
 
 
